# nekosu

./: .gitignore  .gitmodules  Cargo.toml  Kbuild  Makefile
.cargo/: config.toml
.github/workflows/: android.yml  build-lkm.yml  ddk-lkm.yml  renovate.yml  sync-manager.yml  website.yml
docs/: README.md
manager/: .editorconfig  .gitignore  settings.gradle.kts
manager/app/: build.gradle.kts  proguard-rules.pro
manager/app/src/main/: AndroidManifest.xml
manager/app/src/main/cpp/libjni/: CMakeLists.txt  ctl.c  ctl.h  ioctl.h  jni.c
manager/gradle/: libs.versions.toml
manager/gradle/wrapper/: gradle-wrapper.properties
src/: anonfd.c  handle.c  ioctl.c  manager.c  nksu.c  ns.c  privilege.c  tracepoint.c
src/fd/: anonfd.c  eventfd.c  fd.h  shm_hash.c
src/include/: fmac.h  handle.h  hook.h  ioctl.h  privilege.h  tracepoint.h
src/include/selinux/: policy.h
src/profile/: profile.c
src/selinux/: domain.c  dup.c  policy.c  rule.c  selinux.c
src/syscall/: dispatch.c  syscall.c  type.h
userspace/init/: CMakeLists.txt  hashtable.c  hashtable.h  init.c  kmod
userspace/libncore/: go.mod  go.sum  main.go
userspace/libncore/ctl/: ctl.go  ioctl.c  ioctl.h
userspace/libncore/log/: log.go
userspace/ncore/: go.mod  go.sum  ncore.go
userspace/ncore/boot/: Cargo.toml  boot.go  build.rs  head.go  mmap.go
userspace/ncore/boot/src/: cpio.rs  info.rs  lib.rs  parser.rs  patcher.rs  repacker.rs  types.rs  unpacker.rs  utils.rs
userspace/ncore/cli/: Cargo.toml
userspace/ncore/cli/src/: main.rs
userspace/ncore/init/: init.go
userspace/ncore/kmod/: Cargo.toml  hashtable.c  kmod.c  kmod.go  kmod.h
userspace/ncore/kmod/src/: lib.rs
userspace/ncore/module/: info.go  mod.go  run.go
userspace/ncore/modules/: Cargo.toml
userspace/ncore/modules/src/: list.rs  run.rs
userspace/ncore/patcher/: patch.go  ramdisk.go  unpack.go
website/: .gitignore  package.json
website/docs/: NIST_P-256.md  README.md
website/docs/.vuepress/: config.js
(+55 files in other folders)
