[workspace]
members = ["userspace/ncore/cli", "userspace/ncore/kmod", "userspace/ncore/boot", "userspace/ncore/modules"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
overflow-checks = true
